# testing_crew_ai

./: README.md  pyproject.toml  report.md
src/testing_crew_ai/: crew.py  main.py
