[project]
name = "testing_crew_ai"
version = "0.1.0"
description = "testing-crew-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
testing_crew_ai = "testing_crew_ai.main:run"
run_crew = "testing_crew_ai.main:run"
train = "testing_crew_ai.main:train"
replay = "testing_crew_ai.main:replay"
test = "testing_crew_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
